--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -37,7 +37,12 @@ body {
 ol, ul {
 	list-style: none;
 }
-
+center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
 blockquote, q {
 	quotes: none;
 }
