--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -628,7 +628,18 @@ input[type="radio"] + label:before {
 	.icon > .label {
 		display: none;
 	}
+.col {
+  float: left;
+  width: 50%;
+  padding: 5px;
+}
 
+/* Clear floats after image containers */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 /* This changes what an image looks like */
 .image {
 	border-radius: 4px;
